/*
 * $Id: ChangeLog,v 1.4764 2006/01/18 23:44:00 likewolf Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/
2006-01-18 22:00 UTC-0300 Luiz Rafael Culik<luiz at xharbour.com.br>
  * source/tip/client.prg
    ! Added Missing ::Commit call to  ReadToFile() method

2006-01-19 02:40 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * include/hbcomp.h
  * include/hbextern.ch
  * include/hbvm.h
  * source/compiler/harbour.c
  * source/compiler/harbour.sly
  * source/debug/dbghelp.prg
  * source/debug/dbgmenu.prg
  * source/debug/debugger.prg
  * source/vm/dbgentry.c
  * source/vm/hvm.c
    + Added debugging support for GLOBAL variables.
    ! Reflect changes in monitored variables after expression evaluation.

2006-01-18 22:40 UTC+0200 Pavel Tsarenko <tpe2@mail.ru>
  * source/ct/keysec.prg
  * source/ct/keytime.prg
    * fixed bug with pointer comparision

2006-01-18 16:55 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * source/vm/memvars.c
    ! Reset s_privateStackBase and s_privateStackCnt to 0 on CLEAR MEMORY
      or a RESTORE FROM without ADDITIVE clause.
    ! Fixed RELEASE ALL EXCEPT <wildcard> (was doing just the opposite).

2006-01-18 01:10 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * source/rtl/win32ole.prg
    * Corrected false assumption about (VT_DISPATCH | VT_BYREF) and (VT_UNKNOW |VT_BYREF)
    * Added explicit AddRef() rather than avoiding VariantClear()

2006-01-17 13:08 UTC-0300 Antonio Carlos Pantaglione <toninho@fwi.com.br>
  * tests/serialize.prg
    * Fix to work with new HB_DeserialNext() that receive first parameter by reference

2006-01-17 17:45 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * source/debug/debugger.prg
    ! Exclude released private variables from the monitor window.

2006-01-16 21:11 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * source/rtl/win32ole.prg